--- a/Cimob/Views/Manage/_Layout.cshtml
+++ b/Cimob/Views/Manage/_Layout.cshtml
@@ -2,10 +2,15 @@
     Layout = "/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Manage your account</h2>
+<environment include="Development">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/estiloManage.css" />
+</environment>
+
+<h2>Gerenciar a conta </h2>
 
 <div>
-    <h4>Change your account settings</h4>
+   
     <hr />
     <div class="row">
         <div class="col-md-3">
