--- a/Cimob/Views/Shared/_Layout.cshtml
+++ b/Cimob/Views/Shared/_Layout.cshtml
@@ -31,8 +31,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">Candidaturas</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contacto</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
@@ -42,7 +42,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - Cimob</p>
+            <p>&copy; 2017 - Projeto</p>
         </footer>
     </div>
 
@@ -70,3 +70,4 @@
     @RenderSection("Scripts", required: false)
 </body>
 </html>
+
