--- a/Cimob/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/Cimob/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Confirmaçao";
 }
 
 <h2>@ViewData["Title"]</h2>
 <p>
-    Please check your email to reset your password.
+    Por favor verifique o seu email para recuperar a palavra.passe.
 </p>
