--- a/Cimob/Views/Manage/ChangePassword.cshtml
+++ b/Cimob/Views/Manage/ChangePassword.cshtml
@@ -1,6 +1,6 @@
-﻿@model ChangePasswordViewModel
+﻿@model ChangePasswordModel
 @{
-    ViewData["Title"] = "Change password";
+    ViewData["Title"] = "Alterar palavra-passe";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
 }
 
@@ -11,21 +11,18 @@
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="OldPassword"></label>
-                <input asp-for="OldPassword" class="form-control" />
+                <input asp-for="OldPassword" class="form-control"  placeholder="Palavar-passe antiga"/>
                 <span asp-validation-for="OldPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NewPassword"></label>
-                <input asp-for="NewPassword" class="form-control" />
+                <input asp-for="NewPassword" class="form-control" placeholder="Nova palavra-passe"/>
                 <span asp-validation-for="NewPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
+                <input asp-for="ConfirmPassword" class="form-control" placeholder=" Confirmar palavra-passe" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Update password</button>
+            <button type="submit" class="btn btn-default">Alterar</button>
         </form>
     </div>
 </div>
