--- a/Cimob/Views/Manage/_ManageNav.cshtml
+++ b/Cimob/Views/Manage/_ManageNav.cshtml
@@ -5,12 +5,14 @@
 }
 
 <ul class="nav nav-pills nav-stacked">
-    <li class="@ManageNavPages.IndexNavClass(ViewContext)"><a asp-action="Index">Profile</a></li>
-    <li class="@ManageNavPages.ChangePasswordNavClass(ViewContext)"><a asp-action="ChangePassword">Password</a></li>
+ 
+    <li class="@ManageNavPages.AlterarDadosNavClass(ViewContext)"><a asp-action="AlterarDados">Dados do perfil</a></li>
+    <li class="@ManageNavPages.ChangePasswordNavClass(ViewContext)"><a asp-action="ChangePassword">Alterar Palavra-passe</a></li>
     @if (hasExternalLogins)
     {
         <li class="@ManageNavPages.ExternalLoginsNavClass(ViewContext)"><a asp-action="ExternalLogins">External logins</a></li>
     }
     <li class="@ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)"><a asp-action="TwoFactorAuthentication">Two-factor authentication</a></li>
+    <li class=""><a asp-action="ChangePassword">Ver estado da candidatura</a></li>
 </ul>
 
