Login e Recuperar palavra-passe concluido

--- a/Cimob/Views/Account/Login.cshtml
+++ b/Cimob/Views/Account/Login.cshtml
@@ -48,11 +48,11 @@
         </div>
         <p>
             <a asp-action="ForgotPassword">Esqueceu a palavra-passe?</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Criar conta</a>
-        
-        
-        <a asp-area="" asp-controller="AjudaAutenticacaos" asp-action="Index">Ajuda</a>
+
+
+
         </p>
 
     </form>
