--- a/Cimob/Views/Shared/_LoginPartial.cshtml
+++ b/Cimob/Views/Shared/_LoginPartial.cshtml
@@ -20,7 +20,8 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        
+
         <li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
-    </ul>
+        <li><a asp-area="" asp-controller="AjudaAutenticacaos" asp-action="Index">Ajuda</a></li>
+</ul>
 }
