--- a/Cimob/Views/Account/ResetPassword.cshtml
+++ b/Cimob/Views/Account/ResetPassword.cshtml
@@ -12,21 +12,21 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <input asp-for="Code" type="hidden" />
             <div class="form-group">
-                <label asp-for="Email"></label>
+                <label>Email</label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password"></label>
+                <label>Palavra-passe</label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
+                <label>Confirmar Palavra-passe</label>
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Reset</button>
+            <button type="submit" class="btn btn-default">Submeter</button>
         </form>
     </div>
 </div>
