--- a/Cimob/Views/AjudaAutenticacaos/Index.cshtml
+++ b/Cimob/Views/AjudaAutenticacaos/Index.cshtml
@@ -50,5 +50,19 @@
         <li>Confirma a palavra-passe nova;</li>
         <li>Clique no botão alterar.</li>
     </ul>
+    <p>Para recuperar a palavra-passe:</p>
+    <ul>
+        <li>No canto superior direito, clique no login;</li>
+        <li>Após isso clique no link <a asp-area="" asp-controller="Account" asp-action="ForgotPassword">Esqueceu a palavra-passe;</a></li>
+        <li>Preenche o campo com o email; </li>
+        <li>Clique em submeter.</li>
+    </ul>
+    <p>Para consultar e alterar dados do perfil:</p>
+    <ul>
+        <li>É necessário estar logado;</li>
+        <li>Após isso no canto superior direito,clique no nome do utilizador;</li>
+        <li>Aparecerá a páginca gerenciar conta; </li>
+        <li>No menu vertical, clique em consultar dados do perfil.</li>
+    </ul>
 </body>
 </html>
