--- a/Cimob/Views/Manage/_ManageNav.cshtml
+++ b/Cimob/Views/Manage/_ManageNav.cshtml
@@ -4,15 +4,35 @@
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
 
-<ul class="nav nav-pills nav-stacked">
- 
-    <li class="@ManageNavPages.AlterarDadosNavClass(ViewContext)"><a asp-action="AlterarDados">Dados do perfil</a></li>
-    <li class="@ManageNavPages.ChangePasswordNavClass(ViewContext)"><a asp-action="ChangePassword">Alterar Palavra-passe</a></li>
-    @if (hasExternalLogins)
-    {
-        <li class="@ManageNavPages.ExternalLoginsNavClass(ViewContext)"><a asp-action="ExternalLogins">External logins</a></li>
-    }
-    <li class="@ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)"><a asp-action="TwoFactorAuthentication">Two-factor authentication</a></li>
-    <li class=""><a asp-action="ChangePassword">Ver estado da candidatura</a></li>
-</ul>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - Iniciar Sessão</title>
 
+    <environment include="Development">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/css/estiloManage.css" />
+    </environment>
+    <environment exclude="Development">
+        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
+              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+        <link rel="stylesheet" href="~/css/estiloManage.css" asp-append-version="true" />
+    </environment>
+</head>
+<body>
+
+    <ul class="nav nav-pills nav-stacked">
+
+        <li class="@ManageNavPages.AlterarDadosNavClass(ViewContext)"><a asp-action="AlterarDados">Consultar dados do perfil</a></li>
+        <li class="@ManageNavPages.ChangePasswordNavClass(ViewContext)"><a asp-action="ChangePassword">Alterar Palavra-passe</a></li>
+        @if (hasExternalLogins)
+        {
+            <li class="@ManageNavPages.ExternalLoginsNavClass(ViewContext)"><a asp-action="ExternalLogins">External logins</a></li>
+        }
+
+    </ul>
+    </body>
+</html>
