Criar conta, alterar palavra-passe, consultar e alterar dados do perfil concluido

--- a/Cimob/Views/Account/Login.cshtml
+++ b/Cimob/Views/Account/Login.cshtml
@@ -44,7 +44,7 @@
                 </label>
             </div>
 
-            <button type="submit" class="btn btn-default">Iniciar sessao</button>
+            <button type="submit" class="btn btn-default">Iniciar sessão</button>
         </div>
         <p>
             <a asp-action="ForgotPassword">Esqueceu a palavra-passe?</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
