--- a/Cimob/Views/Manage/AlterarDados.cshtml
+++ b/Cimob/Views/Manage/AlterarDados.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AlterarDadosModel
 @{
-    ViewData["Title"] = "Aterar dados do perfil";
+    ViewData["Title"] = "Consultar e Aterar dados do perfil";
     ViewData.AddActivePage(ManageNavPages.AlterarDados);
 }
 
