--- a/Cimob/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/Cimob/Views/Account/ResetPasswordConfirmation.cshtml
@@ -4,5 +4,5 @@
 
 <h2>@ViewData["Title"]</h2>
 <p>
-    Your password has been reset. Please <a asp-action="Login">click here to log in</a>.
+    A sua palavra-passe foi redefinida, por favor <a asp-action="Login">faça log in</a>.
 </p>
