--- a/Cimob/Views/Account/ConfirmEmail.cshtml
+++ b/Cimob/Views/Account/ConfirmEmail.cshtml
@@ -5,6 +5,6 @@
 <h2>@ViewData["Title"]</h2>
 <div>
     <p>
-        Thank you for confirming your email.
+        Obrigada por confirmar o seu email.
     </p>
 </div>
