--- a/Cimob/Views/Account/Login.cshtml
+++ b/Cimob/Views/Account/Login.cshtml
@@ -39,9 +39,7 @@
             <input class="form-control" placeholder="Password" name="Password" type="password" value="">
 
             <div class="checkbox">
-                <label>
-                    <input asp-for="RememberMe" />Lembrar-me?
-                </label>
+                <label><input asp-for="RememberMe" />Lembrar-me? </label>
             </div>
 
             <button type="submit" class="btn btn-default">Iniciar sessão</button>
