--- a/Cimob/Views/Account/Register.cshtml
+++ b/Cimob/Views/Account/Register.cshtml
@@ -45,13 +45,10 @@
                     <span asp-validation-for="Pais" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    @using (Html.BeginForm(actionName = "AddToInvoice", controllerName = "Invoice", method = FormMethod.Post))
-    {
 
-                @Html.DropDownListFor(m => m.Tipo, new SelectList(model.Products, "ProductId", "Name"))
-}
-                    <input asp-for="Tipo" class="form-control" placeholder="Tipo" />
+                    <!--  <input asp-for="Tipo" class="form-control" placeholder="Tipo" />-->
                     <span asp-validation-for="Tipo" class="text-danger"></span>
+                    <select asp-for="Tipo" class="form-control" asp-items="@(new SelectList(ViewBag.ListaDeTipos,"TipoDeUserId","nomeTipo"))"></select>
                 </div>
                 <div class="form-group">
 
