--- a/Cimob/Views/Account/Register.cshtml
+++ b/Cimob/Views/Account/Register.cshtml
@@ -34,22 +34,33 @@
 
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
 
+                <div class="form-group">
+                   
                     <input asp-for="Name" class="form-control" placeholder="Nome" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <input asp-for="DataNascimento" type="date" class="form-control" placeholder="Datanascimento" />
+                </div>
 
-                    <input asp-for="Pais" class="form-control" placeholder="Pais" />
-                    <span asp-validation-for="Pais" class="text-danger"></span>
+                <div class="form-group">
+
+                    <select asp-for="EscolaId" class="form-control" asp-items="ViewBag.EscolaId"></select>
+                    <span asp-validation-for="EscolaId" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+
+                    <select asp-for="TipoId" class="form-control" asp-items="ViewBag.TipoId"></select>
+                    <span asp-validation-for="TipoId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
 
-                    <!--  <input asp-for="Tipo" class="form-control" placeholder="Tipo" />-->
-                    <span asp-validation-for="Tipo" class="text-danger"></span>
-                    <select asp-for="Tipo" class="form-control" asp-items="@(new SelectList(ViewBag.ListaDeTipos,"TipoDeUserId","nomeTipo"))"></select>
+                    <select asp-for="PaisId" class="form-control" asp-items="ViewBag.PaisId"></select>
+                    <span asp-validation-for="PaisId" class="text-danger"></span>
                 </div>
+
                 <div class="form-group">
 
                     <input asp-for="Email" class="form-control" placeholder="Email" />
