--- a/Cimob/Views/Shared/_Layout.cshtml
+++ b/Cimob/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">Candidaturas</a></li>
+                    <li><a asp-area="" asp-controller="Concursoes" asp-action="Index">Candidaturas</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contacto</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
