--- a/Cimob/Views/Candidaturas/Create.cshtml
+++ b/Cimob/Views/Candidaturas/Create.cshtml
@@ -1,52 +1,38 @@
 ﻿@model Cimob.Models.Candidatura.Candidatura
+@inject SignInManager<ApplicationUser> SignInManager
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2>Candidatar</h2>
 
-<h4>Candidatura</h4>
+@ViewBag.Descricao
 <hr />
 <div class="row">
     <div class="col-md-4">
+
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DataCandidatura" class="control-label"></label>
-                <input asp-for="DataCandidatura" class="form-control" />
-                <span asp-validation-for="DataCandidatura" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EstadoCandidaturaId" class="control-label"></label>
-                <select asp-for="EstadoCandidaturaId" class ="form-control" asp-items="ViewBag.EstadoCandidaturaId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Comentarios" class="control-label"></label>
+                <label>Indique o que o leva a candidatar-se:</label>
                 <input asp-for="Comentarios" class="form-control" />
                 <span asp-validation-for="Comentarios" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div hidden class="form-group">
                 <label asp-for="ConcursoId" class="control-label"></label>
-                <select asp-for="ConcursoId" class ="form-control" asp-items="ViewBag.ConcursoId"></select>
+                <input asp-for="ConcursoId" value="@Model.ConcursoId" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="ApplicationUserId" class="control-label"></label>
-                <select asp-for="ApplicationUserId" class ="form-control" asp-items="ViewBag.ApplicationUserId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </form>
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <input type="submit" value="Candidatar" class="btn btn-default" />
+                }
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
