--- a/Cimob/Views/AjudaAutenticacaos/Index.cshtml
+++ b/Cimob/Views/AjudaAutenticacaos/Index.cshtml
@@ -64,5 +64,27 @@
         <li>Aparecerá a páginca gerenciar conta; </li>
         <li>No menu vertical, clique em consultar dados do perfil.</li>
     </ul>
+    <p>Para ver Candidaturas Pendentes:</p>
+    <ul>
+        <li>É necessário estar logado;</li>
+        <li>Após isso no canto superior direito,clique no nome do utilizador;</li>
+        <li>Aparecerá a páginca gerenciar conta; </li>
+        <li>No menu vertical, clique em Ver Candidaturas Pendentes;</li>
+    </ul>
+    <p>Para desistir de uma Candidatatura:</p>
+    <ul>
+        <li>É necessário estar logado;</li>
+        <li>Após isso no canto superior direito,clique no nome do utilizador;</li>
+        <li>Aparecerá a páginca gerenciar conta; </li>
+        <li>No menu vertical, clique em Ver Candidaturas Pendentes;</li>
+        <li>Seleccione Desistir de Candidatura na candidatura que pretende;</li>
+        <li>Seleccione Desistir;</li>
+    </ul>
+    <p>Para se Candidatar:</p>
+    <ul>
+        <li>É necessário estar logado;</li>
+        <li>No menu principal seleccione Candidaturas;</li>
+        <li>Escolha o concurso que mais lhe interessa e seleccione Candidatar;</li>
+    </ul>
 </body>
 </html>
