--- a/Cimob/Views/Shared/_Layout.cshtml
+++ b/Cimob/Views/Shared/_Layout.cshtml
@@ -33,9 +33,10 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">Candidaturas</a></li>
                     <li><a asp-area="" asp-controller="PesquisarCandidaturas" asp-action="Index">Pesquisar Candidatura</a></li>
-                    <li><a asp-area="" asp-controller="Pais" asp-action="Index">País</a></li>
+                    <li><a asp-area="" asp-controller="Pais" asp-action="SearchPais">País</a></li>
                     <li><a asp-area="" asp-controller="Regulamentoes" asp-action="Index">Regulamento</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contacto</a></li>
+                    <li><a asp-area="" asp-controller="Parcerias" asp-action="SearchParcerias">Parcerias</a></li>
 
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
