--- a/Cimob/Views/AjudaAutenticacaos/Index.cshtml
+++ b/Cimob/Views/AjudaAutenticacaos/Index.cshtml
@@ -64,21 +64,21 @@
         <li>Aparecerá a páginca gerenciar conta; </li>
         <li>No menu vertical, clique em consultar dados do perfil.</li>
     </ul>
-    <p>Para ver Candidaturas Pendentes:</p>
+    <p>Para ver estado das Candidaturas:</p>
     <ul>
         <li>É necessário estar logado;</li>
         <li>Após isso no canto superior direito,clique no nome do utilizador;</li>
-        <li>Aparecerá a páginca gerenciar conta; </li>
-        <li>No menu vertical, clique em Ver Candidaturas Pendentes;</li>
+        <li>Aparecerá a página gerenciar conta; </li>
+        <li>No menu vertical, clique em Ver estado das Candidaturas;</li>
     </ul>
-    <p>Para desistir de uma Candidatatura:</p>
+    <p>Para cancelar uma Candidatatura:</p>
     <ul>
         <li>É necessário estar logado;</li>
         <li>Após isso no canto superior direito,clique no nome do utilizador;</li>
-        <li>Aparecerá a páginca gerenciar conta; </li>
-        <li>No menu vertical, clique em Ver Candidaturas Pendentes;</li>
-        <li>Seleccione Desistir de Candidatura na candidatura que pretende;</li>
-        <li>Seleccione Desistir;</li>
+        <li>Aparecerá a página gerenciar conta; </li>
+        <li>No menu vertical, clique em Ver Estado Candidatura;</li>
+        <li>Seleccione Cancelar Candidatura na candidatura que pretende;</li>
+        <li>Seleccione Cancelar Candidatura;</li>
     </ul>
     <p>Para se Candidatar:</p>
     <ul>
