--- a/Cimob/Views/Escolas/SearchEscolas.cshtml
+++ b/Cimob/Views/Escolas/SearchEscolas.cshtml
@@ -12,13 +12,13 @@
 
 </head>
 <body>
-    @model IEnumerable<Cimob.Models.Parcerias>
+    @model IEnumerable<Cimob.Models.Escola>
 
     @{
-        ViewData["Title"] = "SearchParcerias";
+        ViewData["Title"] = "SearchEscolas";
     }
 
-    <h2>Parcerias</h2>
+    <h2>Escolas</h2>
 
     <form asp-controller="Parcerias" asp-action="SearchParcerias">
         <p>
