--- a/Cimob/Views/Shared/_Layout.cshtml
+++ b/Cimob/Views/Shared/_Layout.cshtml
@@ -32,11 +32,11 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">Candidaturas</a></li>
-                    <li><a asp-area="" asp-controller="PesquisarCandidaturas" asp-action="Index">Pesquisar Candidatura</a></li>
                     <li><a asp-area="" asp-controller="Pais" asp-action="SearchPais">País</a></li>
                     <li><a asp-area="" asp-controller="Regulamentoes" asp-action="Index">Regulamento</a></li>
+                    <li><a asp-area="" asp-controller="InformacaoCandidaturas" asp-action="Index">Informação</a></li>
+                    <li><a asp-area="" asp-controller="Escolas" asp-action="SearchEscolas">Parcerias</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contacto</a></li>
-                    <li><a asp-area="" asp-controller="Parcerias" asp-action="SearchParcerias">Parcerias</a></li>
 
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
