--- a/Cimob/Views/Manage/Delete.cshtml
+++ b/Cimob/Views/Manage/Delete.cshtml
@@ -7,6 +7,6 @@
     @ViewBag.Descricao
     <form asp-action="View">
         <a asp-action="VerCandidaturasPendentes">Retroceder</a>  | 
-        <a asp-action="DeleteConfirmed" asp-route-id="@Model.CandidaturaId">Desistir Candidatura</a>
+        <a asp-action="DeleteConfirmed" asp-route-id="@Model.CandidaturaId">Cancelar Candidatura</a>
     </form>
 </div>
