--- a/Cimob/Views/Candidaturas/Delete.cshtml
+++ b/Cimob/Views/Candidaturas/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Cancelar Candidatura</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+
 <div>
     <h4>Candidatura</h4>
     <hr />
@@ -51,7 +51,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="CandidaturaId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Cancelar Candidatura" class="btn btn-default" /> |
+        <a asp-action="Index">Retroceder</a>
     </form>
 </div>
