--- a/Cimob/Views/Manage/VerCandidaturasPendentes.cshtml
+++ b/Cimob/Views/Manage/VerCandidaturasPendentes.cshtml
@@ -50,7 +50,7 @@
                                            @Html.DisplayFor(modelItem => item.candidatura.DataCandidatura)
                                         </td>
                                         <td>
-                                            <a asp-action="Delete" asp-route-id="@item.candidatura.CandidaturaId" >Desistir Candidatura</a>
+                                            <a asp-action="Delete" asp-route-id="@item.candidatura.CandidaturaId" >Cancelar Candidatura</a>
                                         </td>
                                         
                                     </tr>
