--- a/Cimob/Views/Account/Register.cshtml
+++ b/Cimob/Views/Account/Register.cshtml
@@ -40,12 +40,13 @@
                     <input asp-for="Name" class="form-control" placeholder="Nome" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <input asp-for="DataNascimento" type="date" class="form-control" placeholder="Datanascimento" />
-                </div>
+            <!--X    <div class="form-group">   var user = new ApplicationUser { UserName = model.Email, Email = model.Email, PaisId = model.PaisId,
+                    Nome = model.Name, TipoDeUserId = model.TipoId, EscolaId = model.EscolaId,
+                    DataNascimento = model.DataNascimento };
+                    <input asp-for="DataNascimento" type="date" class="form-control" placeholder="Data de nascimento" />
+                </div>-->
 
                 <div class="form-group">
-
                     <select asp-for="EscolaId" class="form-control" asp-items="ViewBag.EscolaId"></select>
                     <span asp-validation-for="EscolaId" class="text-danger"></span>
                 </div>
