--- a/Cimob/Views/Candidaturas/Delete.cshtml
+++ b/Cimob/Views/Candidaturas/Delete.cshtml
@@ -1,57 +1,12 @@
 ﻿@model Cimob.Models.Candidatura.Candidatura
 
-@{
-    ViewData["Title"] = "Delete";
-}
-
-<h2>Cancelar Candidatura</h2>
-
-
+<h3>Deseja desistir da presente candidatura?</h3>
 <div>
-    <h4>Candidatura</h4>
+
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.DataCandidatura)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DataCandidatura)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Comentarios)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Comentarios)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.Id)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Concurso)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Concurso.ConcursoId)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.EstadoCandidatura)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.EstadoCandidatura.EstadoCandidaturaId)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="CandidaturaId" />
-        <input type="submit" value="Cancelar Candidatura" class="btn btn-default" /> |
-        <a asp-action="Index">Retroceder</a>
+    @ViewBag.Descricao
+    <form asp-action="View">
+        <a asp-action="VerCandidaturasPendentes">Retroceder</a>  | 
+        <a asp-action="DeleteConfirmed" asp-route-id="@Model.CandidaturaId">Cancelar Candidatura</a>
     </form>
 </div>
