--- a/Cimob/Views/Home/Contact.cshtml
+++ b/Cimob/Views/Home/Contact.cshtml
@@ -1,17 +1,40 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contactos";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<h2>Entra já em contacto connosco</h2>
+
+<h3>Através do skype:</h3>
+Horário de Funcionamento de atendimento por Skype:<br />
+<strong>2.ª e 4.ª</strong> | 14h00 - 16h30<br />
+<strong>3.ª e 5.ª</strong> | 09h30 - 12h30<br />
+
+<script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
+<div id="SkypeButton_Call_david_santos_12">
+    <script type="text/javascript">
+            Skype.ui({
+                "name": "dropdown",
+                "element": "SkypeButton_Call_david_santos_12",
+                "participants": ["david_santos_12"]
+            });
+    </script>
+</div>
+
+<h3>Enviando-nos uma mensagem:</h3>
+
+
+
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    <strong>Dúvidas Gerais:</strong> <a href="mailto:cimob@ips.pt">cimob@ips.pt</a><br />
+</address>
+<address>
+    Campus do IPS<br />
+    Edifício ESTSetúbal <br />
+    Estefanilha<br />
+    2910-761 Setúbal<br />
+    Portugal<br />
+    <abbr title="Telefone:">Tel::</abbr>
+    + 351 265 790 159
 </address>
 
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+
