--- a/Cimob/Views/Shared/_Layout.cshtml
+++ b/Cimob/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                     <li><a asp-area="" asp-controller="Regulamentoes" asp-action="Index">Regulamento</a></li>
                     <li><a asp-area="" asp-controller="InformacaoCandidaturas" asp-action="Index">Informação</a></li>
                     <li><a asp-area="" asp-controller="Escolas" asp-action="SearchEscolas">Parcerias</a></li>
-                    <li><a asp-area="" asp-controller="Mapa" asp-action="Index">Parcerias</a></li>
+                    <li><a asp-area="" asp-controller="Mapa" asp-action="Index">Pontos de interesses</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contacto</a></li>
 
                 </ul>
