--- a/Cimob/Views/Local/Create.cshtml
+++ b/Cimob/Views/Local/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Cimob.Models.Mapa
+﻿@model Cimob.Models.Local
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h2>Create</h2>
 
-<h4>Mapa</h4>
+<h4>Local</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
