--- a/Cimob/Views/Local/Delete.cshtml
+++ b/Cimob/Views/Local/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Cimob.Models.Mapa
+﻿@model Cimob.Models.Local
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Mapa</h4>
+    <h4>Local</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
