--- a/Cimob/Views/Local/Details.cshtml
+++ b/Cimob/Views/Local/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Cimob.Models.Mapa
+﻿@model Cimob.Models.Local
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Mapa</h4>
+    <h4>Local</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
