--- a/Cimob/Views/Home/Contact.cshtml
+++ b/Cimob/Views/Home/Contact.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Contactos";
 }
 <h2>Entra já em contacto connosco</h2>
-
+<iframe src="" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 <h3>Através do skype:</h3>
 Horário de Funcionamento de atendimento por Skype:<br />
 <strong>2.ª e 4.ª</strong> | 14h00 - 16h30<br />
